Fixes the layout issue of password rule lists

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,9 @@
     cursor: pointer; }
 
 ul#passwordRules {
+  position: absolute;
+  top: 100%;
+  left: 1rem;
   padding: 0;
   list-style: none; }
 
